Re order of hello and hello_parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "selector.h": "c",
         "copy.h": "c",
-        "socks5_internal.h": "c"
+        "socks5_internal.h": "c",
+        "stm.h": "c"
     }
 }
