--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "selector.h": "c",
         "copy.h": "c",
         "socks5_internal.h": "c",
-        "stm.h": "c"
+        "stm.h": "c",
+        "request_handler.h": "c",
+        "auth.h": "c"
     }
 }
